# metamodule-core-modules

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  dump.hh  moduleFactory.cc  moduleFactory.hh
4ms/: 4ms_element_state_conversions.hh  4ms_elements.hh  CMakeLists.txt  module_state_helpers.hh  plugin-mm.json
4ms/core/: Atvert2Core.cc  BPFCore.cc  BWAVPCore.cc  CLKDCore.cc  CLKMCore.cc  ComplexEGCore.cc  DEVCore.cc  DLDCore.cc  DetuneCore.cc  DjembeCore.cc  DjembeCore.hh  DjembeCore_autovec.hh  DjembeCore_neon.h  DjembeCore_neon.hh  DrumCore.cc  ENVVCACore.cc  EnOscCore.cc  FMCore.cc  FollowCore.cc  FreeverbCore.cc  GateCore.cc  HPFCore.cc  KPLSCore.cc  L4Core.cc  LPGCore.cc  MNMXCore.cc  MPEGCore.cc  MidiDemoCore.cc  MultiLFOCore.cc  NoiseCore.cc  OctaveCore.cc  PEGCore.cc  PICore.cc  PanCore.cc  PitchShiftCore.cc  Prob8Core.cc  QCDCore.cc  QPLFOCore.cc  RCDCore.cc  SCMCore.cc  (+15 more)
4ms/helpers/: 4ms_elements.hh
4ms/info/: Atvert2_info.hh  BPF_info.hh  BWAVP_info.hh  CLKD_info.hh  CLKM_info.hh  ComplexEG_info.hh  DEV_info.hh  DLD_info.hh  (+42 more)
4ms/tests/: CMakeLists.txt  Djembe-autovec-selfcontained.cc  Makefile  djembe-selfcontained-test.hh  djembe_tests.cpp  wav_file_stream_tests.cc  wave_file_stream_tests.cc
doc/: 4ms CoreModules QS Guide.md  4ms-coremodules-manual.md
hub/: HubMedium_info.hh  MMAIO_info.hh  MMAudioExpander_info.hh  MMButtonExpander_info.hh  MMButtons_info.hh  audio_expander_defs.hh  button_expander_defs.hh  hub_medium.cc  knob_expander_defs.hh  panel_medium_defs.hh  pot_expander_defs.hh
tests/: CMakeLists.txt  Makefile  moduleFactory_tests.cc
(+78 files in other folders)
